@@ -32,7 +32,7 @@ import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
 /**
  * This class is a scanner generated by 
  * <a href="http://www.jflex.de/">JFlex</a> 1.5.0-SNAPSHOT
- * from the specification file <tt>/Users/sarowe/svn/lucene/dev/branches/branch_4x/lucene/analysis/common/src/java/org/apache/lucene/analysis/standard/std40/StandardTokenizerImpl40.jflex</tt>
+ * from the specification file <tt>/Users/sarowe/svn/lucene/dev/branches/lucene_solr_4_7/lucene/analysis/common/src/java/org/apache/lucene/analysis/standard/std40/StandardTokenizerImpl40.jflex</tt>
  */
 public final class StandardTokenizerImpl40 implements StandardTokenizerInterface {
 
